# platform.core.uifw.e-mod-tizen-eom

./: configure.ac
doc/: Doxyfile  eom_doc.h
packaging/: e-mod-tizen-eom.spec
protocol/: eom-client-protocol.h  eom-protocol.c  eom-server-protocol.h  eom.xml
src/: Makefile.am  e_mod_main.c  e_mod_main.h  e_mod_main_x11.c  e_mod_main_x11.h
